# waifu-assistant

./: .env_example  README.md  pyproject.toml
src/: config.py  main.py
