[tool.poetry]
name = "waifu-assistant"
version = "0.1.0"
description = "LangChain based waifu assistant made only for me"
authors = ["Dosugamea <17107514+Dosugamea@users.noreply.github.com>"]
license = "AGPLv3"
readme = "README.md"
packages = [{include = "waifu_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.53"
httpx = "^0.23.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
isort = "^5.11.4"
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
